--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         </div>
         <hr>
         <div class="skills">
-          <h2>My Skills.</h2>
+          <h2>My Skills</h2>
           <div class="skill-row">
             <img class="skills-pic-one" src="images/skills1.png" alt="Skills Photo">
-            <h3>Lorem & Ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+            <h3>Frontend</h3>
+            <p>HTML, CSS, JavaScript</p>
           </div>
           <div class="skill-row">
             <img class="skills-pic-two" src="images/skills1.png" alt="Skills Photo">
