--- a/index.html
+++ b/index.html
@@ -23,31 +23,82 @@
         <div class="profile">
           <img id="my-photo" src="images/vaspic.jpeg" alt="Photo Of Vasileios">
           <h2>Hello.</h2>
-          <p class="bio">Technology enthusiast with passion in acquiring more knowledge in software engineering. 
+          <p class="bio">Technology enthusiast with passion in acquiring more knowledge in web development and software engineering. 
             Working experience in different industries such as Hospitality and Health. 
            Team player and independent individual. Easy to adjust in new environments. 
             Fast learner and seeking thorough understanding of a subject. 
            Interested in making people's life better through technology.</p>
         </div>
         <hr>
+        <div class="education">
+          <h2>Education.</h2>
+          <div class="edu-row">
+            <h3>PGDip in Computing</h3>
+            <p>Edinburgh Napier University</p>
+            <p>2020-2022</p>
+            <p>Distinction</p>
+          </div>
+          <div class="edu-row">
+            <h3>MSc in Tourism Management</h3>
+            <p>Edinburgh Napier University</p>
+            <p>2013-1014</p>
+            <p>2:1</p>
+        </div>
+        <div class="edu-row">
+          <h3>BA in Communications</h3>
+          <p>American College of Greece</p>
+          <p>2006-2012</p>
+          <p>GPA 2.9</p>
+      </div>
+        <hr>
         <div class="skills">
           <h2>My Skills.</h2>
+          <img class="skills-pic-one" src="images/skills1.png" alt="Skills Photo">
+            <h3>Software Engineering & Web Development</h3>
           <div class="skill-row">
-            <img class="skills-pic-one" src="images/skills1.png" alt="Skills Photo">
-            <h3>Lorem & Ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+            <ul>
+              <li>JAVA</li>
+              <li>C#</li>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+              <li>JQuery</li>
+            </ul>
           </div>
           <div class="skill-row">
-            <img class="skills-pic-two" src="images/skills1.png" alt="Skills Photo">
-            <h3>Lorem Ipsum Dolor</h3>
-            <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+            <ul>
+              <li>Bootstrap</li>
+              <li>Database Management</li>
+              <li>ASP.NET</li>
+              <li>MVC</li>
+              <li>SDLC</li>
+              <li>Use Cases</li>
+            </ul>
+          </div>
+          <div class="skill-row">
+            <ul>
+              <li>UML</li>
+              <li>Agile Development</li>
+              <li>Design Patterns</li>
+              <li>OOP</li>
+              <li>PHP</li>
+              <li>SQL</li>
+            </ul>
           </div>
         </div>
         <hr>
+        <div class="projects">
+          <h2>My Projects.</h2>
+          <h3>Sky Wars</h3>
+          <p>console game developed in Java</p>
+          <h3>Boozy Monkey</h3>
+          <p>e-shop developed with HTML, CSS, Javascript, Bootstrap, JQuery, PHP, MySQL, XAMPP, phpMyAdmin</p>
+        </div>
+      </div>
+      <hr>
         <div class="contact-me">
           <h2>Get In Touch</h2>
-          <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-          <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+          <p>DM me on my social media or click the button below to email me your enquiries!</p>          
           <a class="btn" href="mailto:v.milias1@gmail.com">CONTACT ME</a>
         </div>
       </div>
@@ -56,7 +107,8 @@
       <div class="bottom-container">
         <a class="footer-link" href="https://www.linkedin.com/in/vasileios-milias-805546b0/">LinkedIn</a>
         <a class="footer-link" href="https://www.instagram.com/vasileio_m/">Instagram</a>
-        <p class="copyright">© 2022 Vasileios Milias.</p>
+        <a class="footer-link" href="https://github.com/Vasileios1988">GitHub</a>
+        <p class="copyright">© 2023 Vasileios Milias.</p>
       </div>
       
 
